# edo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  edo.cabal  flake.nix  hie.yaml  readme.md
docs/: PROLOGUE.md
src/EithErrDo/: Branch.hs  Collect.hs  Core.hs  Edo.hs  Error.hs  Except.hs  Kleisli.hs  Lift.hs  Res.hs  Types.hs
src/EitherDo/: Branch.hs  Collect.hs  Core.hs  Edo.hs  Error.hs  Except.hs  Kleisli.hs  Lift.hs  Res.hs
src/ReadErrDo/: Example.hs  Redo.hs
test/: Main.hs
